Сделал загрузку регионов, пока в сыром виде